# hermes-agent-ultra

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  EQUITY_RESEARCH_CHECKLIST.md  EQUITY_RESEARCH_TODO.md  Makefile  PARITY_PLAN.md
.cargo/: config.toml
.cursor/plans/: insights_contribution_pipeline_2aa74715.plan.md
.cursor/rules/: Git-commit.mdc  MUST.mdc
.github/workflows/: release.yml  skills-guard-scan.yml
.hermes/memories/: MEMORY.md  USER.md
.local-wip-backup/pull-477751157/: Cargo.toml
apps/hermes-desktop-tauri/: package.json
crates/hermes-acp/: Cargo.toml
crates/hermes-agent/: Cargo.toml
crates/hermes-auth/: Cargo.toml
crates/hermes-cli/: Cargo.toml
crates/hermes-copilot-lite/: Cargo.toml
crates/hermes-core/: Cargo.toml  build.rs
crates/hermes-environments/: Cargo.toml
crates/hermes-eval/: Cargo.toml
crates/hermes-gateway/: Cargo.toml
crates/hermes-half-duplex/: Cargo.toml  half_duplex.example.toml
crates/hermes-half-duplex/src/: bridge.rs  busy_replies.rs  config.rs  dashscope.rs  error.rs  lib.rs  voice_session.rs
crates/hermes-half-duplex/src/asr/: bailian.rs  mod.rs
crates/hermes-half-duplex/src/audio/: capture.rs  devices.rs  fault.rs  mod.rs  playback.rs
crates/hermes-half-duplex/src/kws/: mod.rs  sherpa.rs  text2token.rs
crates/hermes-half-duplex/src/orchestrator/: engine.rs  mod.rs  wake.rs
crates/hermes-half-duplex/src/tts/: bailian.rs  mod.rs
crates/hermes-half-duplex/src/vad/: mod.rs  webrtc_vad.rs
crates/hermes-insights/: Cargo.toml
crates/hermes-insights/src/: client.rs  lib.rs  maturity.rs  outbox.rs  paths.rs  response.rs  sanitize.rs  service.rs  session_skills.rs  skill.rs  types.rs  work_package.rs
crates/hermes-insights/tests/: golden.rs
crates/hermes-insights/tests/fixtures/: skill_with_pii.md
crates/hermes-market-watch/: Cargo.toml
crates/hermes-media-workflows/: Cargo.toml
crates/hermes-media-workflows/src/: assets.rs  credits.rs  delivery.rs  lib.rs  llm_refine.rs  long_video_active.rs  long_video_plan.rs  platform.rs  preview.rs  progress.rs  prompt_guidance.rs  prompt_refine.rs  qa.rs  register.rs  tool_schemas.rs  video_segment.rs
crates/hermes-media-workflows/src/backends/: flowy_image.rs  flowy_video.rs  flowy_video_router.rs  mod.rs  traits.rs
crates/hermes-media-workflows/src/delivery/: mod.rs  prompts.rs
crates/hermes-media-workflows/src/tools/: cancel.rs  mod.rs  plan.rs  run.rs  status.rs
crates/hermes-media-workflows/src/workflows/: control.rs  definition.rs  executor.rs  manifest.rs  mod.rs  runner.rs  store.rs  templates.rs
crates/hermes-media-workflows/tests/: workflow_store.rs
crates/hermes-parity-tests/: Cargo.toml
crates/hermes-server/: Cargo.toml
crates/hermes-server/src/: backend.rs  error.rs  lib.rs  main.rs  middleware.rs  server.rs  state.rs
crates/hermes-server/src/core/: agent_builder.rs  interaction_dispatch.rs  mod.rs  session.rs
crates/hermes-server/src/rest/: audio.rs  config.rs  cron.rs  env.rs  events.rs  gateway.rs  memory.rs  messaging.rs  mod.rs  models.rs  ops.rs  profiles.rs  sessions.rs  skills.rs  status.rs  toolsets.rs
crates/hermes-server/src/rpc/: attachment.rs  completion.rs  config.rs  file_resolver.rs  handoff.rs  interaction.rs  mod.rs  model.rs  prompt.rs  session.rs  setup.rs  slash.rs  tools.rs
crates/hermes-server/src/ws/: auth.rs  event_adapter.rs  events.rs  handler.rs  mod.rs  rpc.rs  session_events.rs  transport.rs
crates/hermes-server/tests/: integration_test.rs
docs/: QUORUM_AGENTS.md  feishu-tools.md  image-video-generation-api.md  ota-update-research.md  version-management-guide.md  weixin-picoclaw-comparison-zh.md
scripts/: cleanup-modelscope-nightly.py  commit-cron-prs.ps1  commit-phase-a-prs.ps1  cross_aarch64_cc_wrapper.sh  cross_aarch64_ld_wrapper.sh  cross_install_gcc10_aarch64.sh  cross_install_gcc_aarch64.sh  cross_prefetch_pdfium.sh  cross_prefetch_sherpa_onnx.sh  download_kws_models.sh  make_video.py  package_aarch64_board.sh  record_equity_research_fixtures.py  release_secret_scan.py  skills-guard-scan.ps1  skills-guard-scan.sh  upload-modelscope-release.py
(+880 files in other folders)
