[package]
name = "hermes-half-duplex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Half-duplex voice chat (DashScope streaming ASR/TTS + cpal)"

[dependencies]
anyhow = "1"
async-trait = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
pinyin = "0.11"
rand = "0.9"
rubato = "0.16"
serde = { workspace = true }
serde_json = { workspace = true }
sherpa-onnx = "1.13"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tokio-util = "0.7"
toml = "0.8"
tracing = { workspace = true }
uuid = { workspace = true }
cpal = "0.15"
webrtc-vad = "0.4"
