[package]
name = "hermes-insights"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "De-identified local skills/POI contribution pipeline for Hermes Agent"

[dependencies]
hermes-config = { workspace = true }
hermes-intelligence = { workspace = true }
hermes-skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = "0.11"
hex = "0.4"
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
