[package]
name = "hermes-media-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Flowy media generation backends and workflow orchestration for Hermes Agent"

[dependencies]
hermes-config = { workspace = true }
hermes-core = { workspace = true }
hermes-server-client = { workspace = true }
hermes-tools = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
hermes-core = { workspace = true }
