[package]
name = "hermes-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Desktop backend server for Hermes Agent Ultra"

[[bin]]
name = "hermes-ultra"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Utils
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = "2"
indexmap = { workspace = true }

# Internal crates
hermes-core = { workspace = true }
hermes-config = { workspace = true }
hermes-agent = { workspace = true }
hermes-gateway = { workspace = true }
hermes-tools = { workspace = true }
hermes-cron = { workspace = true }
hermes-mcp = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tempfile = "3"
